--- a/views/listPatients.hbs
+++ b/views/listPatients.hbs
@@ -23,26 +23,29 @@
 <!--        </div>-->
 <!--    </div>-->
 <!--</nav>-->
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
 <head>
-    <title>Sidebar 05</title>
+    <title>CMS QUẢN LÝ BỆNH NHÂN</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Untitled</title>
-    <link rel="stylesheet" href="bootstrap5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bootstrap5/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="bootstrap5/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="bootstrap5/fonts/fontawesome5-overrides.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/css/theme.bootstrap_4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
-    <link rel="stylesheet" href="bootstrap5css/Ludens---1-Index-Table-with-Search--Sort-Filters-v20.css">
-    <link rel="stylesheet" href="bootstrap5/css/styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/Ludens---1-Index-Table-with-Search--Sort-Filters-v20.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
+
 <div class="wrapper d-flex align-items-stretch">
     <nav id="sidebar">
         <div class="custom-menu">
@@ -51,97 +54,203 @@
                 <span class="sr-only">Toggle Menu</span>
             </button>
         </div>
-        <div class="p-4">
-                <h1><a href="index.html" class="logo">Xin chào <span></span></a></h1>
+        <div class="p-4 pt-5">
+            <h1><a href="index.html" class="logo">Xin chào</a></h1>
             <ul class="list-unstyled components mb-5">
                 <li class="active">
-                    <a href="/list-patients"><span class="fa fa-home mr-3"></span> Danh sách bệnh nhân</a>
+                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Bệnh nhân</a>
+                    <ul class="collapse list-unstyled" id="homeSubmenu">
+                        <li>
+                            <a href="/list-patients">Danh Sách Bệnh Nhân</a>
+                        </li>
+                        <li>
+                            <a href="/add-patient">Thêm Bệnh Nhân</a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
-                    <a href="/list"><span class="fa fa-user mr-3"></span> Danh sách bác sĩ</a>
+                    <a href="/list">Danh Sách Bác Sĩ</a>
                 </li>
                 <li>
-                    <a href="/add-patient"><span class="fa fa-briefcase mr-3"></span> Thêm bệnh nhân</a>
+                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
+                    <ul class="collapse list-unstyled" id="pageSubmenu">
+                        <li>
+                            <a href="">Page 1</a>
+                        </li>
+                        <li>
+                            <a href="#">Page 2</a>
+                        </li>
+                        <li>
+                            <a href="#">Page 3</a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
-                    <a href="/login"><span class="fa fa-sticky-note mr-3"></span> Đăng xuất</a>
+                    <a href="/login">Đăng Xuất</a>
                 </li>
                 <li>
-                    <a href="#"><span class="fa fa-suitcase mr-3"></span> Phản hồi</a>
+                    <a href="#">Phản Hồi</a>
                 </li>
             </ul>
 
-
+            <div class="mb-5">
+                <h3 class="h6">Subscribe for newsletter</h3>
+                <form action="#" class="colorlib-subscribe-form">
+                    <div class="form-group d-flex">
+                        <div class="icon"><span class="icon-paper-plane"></span></div>
+                        <input type="text" class="form-control" placeholder="Enter Email Address">
+                    </div>
+                </form>
+            </div>
         </div>
     </nav>
 
     <!-- Page Content  -->
-    <div class="w-100 p-2"  >
-        <div class="card" id="TableSorterCard">
-            <div class="card-header py-2">
-                <div class="row table-topper align-items-center">
-                    <div class="col-12 col-sm-5 col-md-6 text-start" style="margin: 0px;padding: 5px 15px;">
-                        <p class="text-primary m-0 fw-bold">Danh sách bệnh nhân</p>
-                    </div>
-                    <div class="col-12 col-sm-7 col-md-6 text-end" style="margin: 0px;padding: 5px 15px;">
-                        <button class="btn btn-primary btn-sm reset" type="button" style="margin: 2px;">Borrar Filtros
-                        </button>
-                        <button class="btn btn-warning btn-sm" id="zoom_in" type="button" zoomclick="ChangeZoomLevel(-10);"
-                                style="margin: 2px;"><i class="fa fa-search-plus"></i></button>
-                        <button class="btn btn-warning btn-sm" id="zoom_out" type="button" zoomclick="ChangeZoomLevel(-10);"
-                                style="margin: 2px;"><i class="fa fa-search-minus"></i></button>
+    <div id="content" class="p-4 p-md-5 pt-5">
+        <div class="container-fluid"  >
+            <div class="card" id="TableSorterCard">
+                <div class="card-header py-2">
+                    <div class="row table-topper align-items-center">
+                        <div class="col-12 col-sm-5 col-md-6 text-start" style="margin: 0px;padding: 5px 15px;">
+                            <p class="text-primary m-0 fw-bold">Danh sách bệnh nhân</p>
+                        </div>
+                        <div class="col-12 col-sm-7 col-md-6 text-end" style="margin: 0px;padding: 5px 15px;">
+                            <button class="btn btn-primary btn-sm reset" type="button" style="margin: 2px;">Borrar Filtros
+                            </button>
+                            <button class="btn btn-warning btn-sm" id="zoom_in" type="button" zoomclick="ChangeZoomLevel(-10);"
+                                    style="margin: 2px;"><i class="fa fa-search-plus"></i></button>
+                            <button class="btn btn-warning btn-sm" id="zoom_out" type="button" zoomclick="ChangeZoomLevel(-10);"
+                                    style="margin: 2px;"><i class="fa fa-search-minus"></i></button>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="table-responsive">
-                        <table class="table table-striped table tablesorter" id="ipi-table">
-                            <thead class="thead-dark">
-                            <tr>
-                                <th class="column1">Ảnh</th>
-                                <th class="column2">ID</th>
-                                <th class="column3">Họ Và Tên</th>
-                                <th class="column4">Tên đăng nhập</th>
-                                <th class="column5">Mật khẩu</th>
-                                <th class="column4">Số điện thoại</th>
-                                <th class="column6">Số phòng</th>
-                                <th class="column6">Sự kiện</th>
-                            </tr>
-                            </thead>
-                            {{#each docs}}
-                                <tbody>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="table-responsive">
+                            <table class="table table-striped table tablesorter" id="ipi-table">
+                                <thead class="thead-dark">
                                 <tr>
-                                    <td class="column1"><img class="rounded-circle me-2" width="30" height="30"
-                                                             src="img/avatars/avatar{{this.id}}.jpeg"/></td>
-                                    <td class="column2">{{this.id}}</td>
-                                    <td class="column3">{{this.name}}</td>
-                                    <td class="column4">{{this.username}}</td>
-                                    <td class="column5">{{this.password}}</td>
-                                    <td class="column4">{{this.phone}}</td>
-                                    <td class="column6">{{this.number_room}}</td>
-                                    <td class="text-center align-middle" style="max-height: 60px;height: 60px;">
-                                        <a class="btn btnMaterial btn-flat primary semicircle" role="button"
-                                           href="/list-patients/{{this._id}}"><i class="far fa-eye"></i></a>
-                                        <a class="btn btnMaterial btn-flat success semicircle" role="button"
-                                           href="/list-patients/update/{{this._id}}"><i class="fas fa-pen"></i></a>
-                                        <a class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover" role="button"
-                                           href="/delete/{{this._id}}">
-                                            <i class="fas fa-trash btnNoBorders" style="color: #DC3545;"></i></a>
-                                    </td>
+                                    <th class="column1">Ảnh</th>
+                                    <th class="column2">ID</th>
+                                    <th class="column3">Họ Và Tên</th>
+                                    <th class="column4">Tên đăng nhập</th>
+                                    <th class="column5">Mật khẩu</th>
+                                    <th class="column4">Số điện thoại</th>
+                                    <th class="column6">Số phòng</th>
+                                    <th class="column6">Sự kiện</th>
                                 </tr>
-                                </tbody>
-                            {{/each}}
-                        </table>
+                                </thead>
+                                    {{#each docs}}
+                                    <tbody>
+                                    <tr>
+                                        <td class="column1"><img class="rounded-circle me-2" width="30" height="30"
+                                                                 src="img/avatars/avatar{{this.id}}.jpeg"/></td>
+                                        <td class="column2">{{this.id}}</td>
+                                        <td class="column3">{{this.name}}</td>
+                                        <td class="column4">{{this.username}}</td>
+                                        <td class="column5">{{this.password}}</td>
+                                        <td class="column4">{{this.phone}}</td>
+                                        <td class="column6">{{this.number_room}}</td>
+                                        <td class="text-center align-middle" style="max-height: 60px;height: 60px;">
+                                            <a class="btn btnMaterial btn-flat primary semicircle" role="button"
+                                               href="/list-patients/{{this._id}}"><i class="far fa-eye"></i></a>
+                                            <a class="btn btnMaterial btn-flat success semicircle" role="button"
+                                               href="/list-patients/update/{{this._id}}"><i class="fas fa-pen"></i></a>
+                                            <a class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover" role="button"
+                                               href="/delete/{{this._id}}">
+                                                <i class="fas fa-trash btnNoBorders" style="color: #DC3545;"></i></a>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                    {{/each}}
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/jquery.tablesorter.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-filter.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-storage.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+<script src="js/Ludens---1-Index-Table-with-Search--Sort-Filters-v20-1.js"></script>
+<script src="js/Ludens---1-Index-Table-with-Search--Sort-Filters-v20.js"></script>
+<!--<script src="js/jquery.min.js"></script>-->
+<script src="js/popper.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
 
 
 
-
+<!--<div id="content" class="p-4 p-md-5 pt-5">-->
+<!--    <div class="w-100 p-2"  >-->
+<!--        <div class="card" id="TableSorterCard">-->
+<!--            <div class="card-header py-2">-->
+<!--                <div class="row table-topper align-items-center">-->
+<!--                    <div class="col-12 col-sm-5 col-md-6 text-start" style="margin: 0px;padding: 5px 15px;">-->
+<!--                        <p class="text-primary m-0 fw-bold">Danh sách bệnh nhân</p>-->
+<!--                    </div>-->
+<!--                    <div class="col-12 col-sm-7 col-md-6 text-end" style="margin: 0px;padding: 5px 15px;">-->
+<!--                        <button class="btn btn-primary btn-sm reset" type="button" style="margin: 2px;">Borrar Filtros-->
+<!--                        </button>-->
+<!--                        <button class="btn btn-warning btn-sm" id="zoom_in" type="button" zoomclick="ChangeZoomLevel(-10);"-->
+<!--                                style="margin: 2px;"><i class="fa fa-search-plus"></i></button>-->
+<!--                        <button class="btn btn-warning btn-sm" id="zoom_out" type="button" zoomclick="ChangeZoomLevel(-10);"-->
+<!--                                style="margin: 2px;"><i class="fa fa-search-minus"></i></button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="row">-->
+<!--                <div class="col-12">-->
+<!--                    <div class="table-responsive">-->
+<!--                        <table class="table table-striped table tablesorter" id="ipi-table">-->
+<!--                            <thead class="thead-dark">-->
+<!--                            <tr>-->
+<!--                                <th class="column1">Ảnh</th>-->
+<!--                                <th class="column2">ID</th>-->
+<!--                                <th class="column3">Họ Và Tên</th>-->
+<!--                                <th class="column4">Tên đăng nhập</th>-->
+<!--                                <th class="column5">Mật khẩu</th>-->
+<!--                                <th class="column4">Số điện thoại</th>-->
+<!--                                <th class="column6">Số phòng</th>-->
+<!--                                <th class="column6">Sự kiện</th>-->
+<!--                            </tr>-->
+<!--                            </thead>-->
+<!--                            {{#each docs}}-->
+<!--                                <tbody>-->
+<!--                                <tr>-->
+<!--                                    <td class="column1"><img class="rounded-circle me-2" width="30" height="30"-->
+<!--                                                             src="img/avatars/avatar{{this.id}}.jpeg"/></td>-->
+<!--                                    <td class="column2">{{this.id}}</td>-->
+<!--                                    <td class="column3">{{this.name}}</td>-->
+<!--                                    <td class="column4">{{this.username}}</td>-->
+<!--                                    <td class="column5">{{this.password}}</td>-->
+<!--                                    <td class="column4">{{this.phone}}</td>-->
+<!--                                    <td class="column6">{{this.number_room}}</td>-->
+<!--                                    <td class="text-center align-middle" style="max-height: 60px;height: 60px;">-->
+<!--                                        <a class="btn btnMaterial btn-flat primary semicircle" role="button"-->
+<!--                                           href="/list-patients/{{this._id}}"><i class="far fa-eye"></i></a>-->
+<!--                                        <a class="btn btnMaterial btn-flat success semicircle" role="button"-->
+<!--                                           href="/list-patients/update/{{this._id}}"><i class="fas fa-pen"></i></a>-->
+<!--                                        <a class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover" role="button"-->
+<!--                                           href="/delete/{{this._id}}">-->
+<!--                                            <i class="fas fa-trash btnNoBorders" style="color: #DC3545;"></i></a>-->
+<!--                                    </td>-->
+<!--                                </tr>-->
+<!--                                </tbody>-->
+<!--                            {{/each}}-->
+<!--                        </table>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
